@@ -1,11 +1,11 @@
 ## Process this file with automake to produce Makefile.in
-## $Id: Makefile.am,v 1.2 2002-02-26 19:13:14 joostvb Exp $
+## $Id: Makefile.am,v 1.3 2002-02-27 16:53:27 joostvb Exp $
 
 mkdir = $(datadir)/$(PACKAGE)/mk
-mk_DATA = install.mk
-EXTRA_DIST = install.mk
+mk_DATA = caspar.mk
+EXTRA_DIST = caspar.mk
 
 install-data-hook:
 	mkdir -p $(includedir)/$(PACKAGE)/mk
-	-rm $(includedir)/$(PACKAGE)/mk/install.mk
-	ln -s $(mkdir)/install.mk $(includedir)/$(PACKAGE)/mk/install.mk
+	-rm $(includedir)/$(PACKAGE)/mk/caspar.mk
+	ln -s $(mkdir)/caspar.mk $(includedir)/$(PACKAGE)/mk/caspar.mk
